Story, Markdown, Converter and form

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -54,3 +54,6 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+backlog_app:
+    markdown_converter: simple
