--- a/src/Backlog/BacklogBundle/Resources/config/routing.yml
+++ b/src/Backlog/BacklogBundle/Resources/config/routing.yml
@@ -45,6 +45,11 @@ bl_backlogrow_show:
     defaults: { _controller: "BacklogBacklogBundle:BacklogRow:show" }
     requirements: { _method: "GET", id: \d+ }
 
+bl_backlogrow_showComments:
+    pattern: /b/{backlog_uid}/{id}/comments
+    defaults: { _controller: "BacklogBacklogBundle:BacklogRow:showComments" }
+    requirements: { _method: "GET", id: \d+ }
+
 bl_backlogrow_edit:
     pattern: /b/{backlog_uid}/{id}/edit
     defaults: { _controller: "BacklogBacklogBundle:BacklogRow:edit" }
